--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@ footer {
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="border-radius:15px;width:100%">
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173040-30348800-8c30-11eb-9ccc-1a32c7eeb576.JPEG" style="border-radius:15px;width:100%">
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173189-4f331a00-8c30-11eb-9e9e-7418708d9bd4.JPEG" style="border-radius:15px;width:100%">
- <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173316-68d46180-8c30-11eb-9b72-6da08d828383.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174138-21020a00-8c31-11eb-8ce7-4c18c48d63a5.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174239-3840f780-8c31-11eb-934f-b629767f4d58.JPEG" style="width:100%">
- <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174624-8524ce00-8c31-11eb-828a-e1b8938dfd58.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174729-9bcb2500-8c31-11eb-8cd9-bb34e9eaa829.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174850-b43b3f80-8c31-11eb-800b-d916fcc22622.JPEG" style="width:100%">
- <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174961-ca490000-8c31-11eb-93e9-bfece9690368.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175049-df259380-8c31-11eb-870b-56354a65197f.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175222-0a0fe780-8c32-11eb-8ed0-70e4e0e8ce6f.JPEG" style="width:100%">
- <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175295-1d22b780-8c32-11eb-957e-b089564cd856.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175418-3166b480-8c32-11eb-8bc1-cb3e9edaf6b9.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175511-43485780-8c32-11eb-8813-7d826fe187d6.JPEG" style="width:100%">
- <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175606-5824eb00-8c32-11eb-8ff2-73dae36f7219.JPEG" style="width:100%">
-  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175690-6a9f2480-8c32-11eb-822a-d81dde4ffa5c.JPEG" style="width:100%">
+ <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112173316-68d46180-8c30-11eb-9b72-6da08d828383.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174138-21020a00-8c31-11eb-8ce7-4c18c48d63a5.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174239-3840f780-8c31-11eb-934f-b629767f4d58.JPEG" style="border-radius:15px;width:100%">
+ <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174624-8524ce00-8c31-11eb-828a-e1b8938dfd58.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174729-9bcb2500-8c31-11eb-8cd9-bb34e9eaa829.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174850-b43b3f80-8c31-11eb-800b-d916fcc22622.JPEG" style="border-radius:15px;width:100%">
+ <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112174961-ca490000-8c31-11eb-93e9-bfece9690368.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175049-df259380-8c31-11eb-870b-56354a65197f.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175222-0a0fe780-8c32-11eb-8ed0-70e4e0e8ce6f.JPEG" style="border-radius:15px;width:100%">
+ <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175295-1d22b780-8c32-11eb-957e-b089564cd856.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175418-3166b480-8c32-11eb-8bc1-cb3e9edaf6b9.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175511-43485780-8c32-11eb-8813-7d826fe187d6.JPEG" style="border-radius:15px;width:100%">
+ <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175606-5824eb00-8c32-11eb-8ff2-73dae36f7219.JPEG" style="border-radius:15px;width:100%">
+  <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112175690-6a9f2480-8c32-11eb-822a-d81dde4ffa5c.JPEG" style="border-radius:15px;width:100%">
   
 </div>
 
