--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <style>
  table, th, td {
-  border: 5px solid #D8BFD8;
+  border: 5px solid #E6E6FA;
   border-left: none;
   border-right: none;
   border-collapse: collapse;
@@ -47,7 +47,7 @@ th, td {
 nav {
   float:left;
   width:20%;
-  background:#D8BFD8;
+  background:#E6E6FA;
   padding: 20px;
  font-size: 15px;
  color: #556B2F;
