--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ footer {
       </p>
      </center>
    <h2> <center> Nayli Rozali </center> </h2>
-      <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay, Chinese and Japanese heritage.
+      <p> Hello! My name is Nayli. I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
     </p>
    <br>
