--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function carousel() {
   pics++;
   if (pics > x.length) {pics = 1}    
   x[pics-1].style.display = "block";  
-  setTimeout(carousel, 3000); // Change image every 2 seconds
+  setTimeout(carousel, 2000); // Change image every 2 seconds
 }
  </script>
  </body>
@@ -225,8 +225,18 @@ function carousel() {
      
           <img src="https://user-images.githubusercontent.com/79895560/111909112-e5cbd380-8a96-11eb-8d9e-8d3ec5c13db6.png"style="width:450px;height:85px;">
        <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
-        Analysing trends within the industry to formulate business and technology strategies, as well as develop pathways to make optimal investment decisions. 
+        Being a Technology Strategy Analyst will enable me to influence the role of technology in the financial industry in Australia. I’ll be able to troubleshoot existing software and suggest methods of improvement, while also develop new technologies to improve performance. I’d also be able to approach this job from a business perspective, such as analysing consumer trends and researching investment opportunities.  
        </p>
+          <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
+           This job is appealing to me because I would like the chance to witness the influence of information technology in our daily lives, and a job opportunity at an Australian bank would be the best place to gain experience. In addition, I’d also like to gain knowledge and expertise outside of the Information Technology industry, which this job allows. I’d like to develop skills in business strategies, analysis as well as improve my teamwork skills
+          </p>
+           <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
+            The job requires a degree in any field, as well as experience in various industries such as information technology, business, finance and/or start-ups. It also requires creative and social skills in order to deliver clear and concise presentations, along with converting raw data to form precise business approaches. A business or economics background would be particularly useful in navigating the tasks this job requires.
+          </p>
+            <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F">
+             In order to meet these job requirements, I need to complete my bachelor degree in IT and graduate with a relevant minor, such as Economics, to boost my chances of being hired for this job. Since I’m currently struggling with Practical Database Concepts and using Structured Query Language (SQL), I intend to strengthen my skills and theoretical knowledge of databases. I should also participate in extra-curricular events during my program, such as hackathons and symposiums to explore my interests in technology, and gain an in-depth understanding of what I’m interested in. Besides that, working part-time as a software developer/programmer would also increase my chances of being employed.
+          </p>
+          
         </td>
          </tr>
         <tr>
