--- a/index.html
+++ b/index.html
@@ -255,13 +255,22 @@ function carousel() {
       Although ENTJs have difficulty working in teams, I believe that my friendly and bubbly personality will help me achieve satisfactory results, while still avoiding conflict among team members. As an ENTJ, I have a strong sense of determination and dedication when it comes to work, however, I do realise that my emotions are turbulent, which may cause me to have mood swings and lash out at my team.
      </p>
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
-      When forming a team, I should also get to know my teammates so I can empathize with their concerns and see them as equals, instead of merely focusing on the task. Learning about their traits can also help me analyse their strengths and weaknesses, allowing me to delegate tasks between us and seek help from them to strengthen my weaker abilities. 
+      When forming a team, I should also get to know my teammates so I can empathize with their concerns and see them as equals, instead of merely focusing on the task. Learning about their traits can also help me analyse their strengths and weaknesses, allowing me to delegate tasks between us and seek help from them to strengthen my weaker abilities. I also believe tolerance and communication with others are both aspects that I can improve in.
      </p>
      <h3 style="font-size:18px;color:#BC8F8F"> <i> Visual Learner <i> </h3> 
      <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
+      My learning style test result indicates that I am a visual learner. This allows me to visualize data and recall written information easily. I can retain information longer by making my own notes for subjects, as well as color-coding them. Additionally, my strengths also lie in observation – which can be useful for analysing trends and data.
+      </p>
       
      <h3 style="font-size:18px;color:#BC8F8F"> <i> Enneagram Type 6 <i> </h3>
-     <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"
+     <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F">
+      I’ve also taken the Enneagram test to have a better understanding of my strengths and weaknesses. The results from the test indicate that I’m a Type Six, The Loyalist. The Enneagram Institute states that Type Sixes are trustworthy and reliable when they’re at their best. I believe these results are accurate to a certain degree as I value security and am firm in my beliefs. Additionally, I tend to obsessively analyse big decisions before I make them, as I am cautious and do not want to lose my self-confidence and sense of security. 
+      </p>
+       <h3 style="font-size:18px;color:#BC8F8F"> <i> Overview <i> </h3>
+        <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F">
+         I believe these personal attributes are valuable assets because of my dominance and leadership skills as an ENTJ can be mellowed out with my demands as a Type Six. My determination and efficiency will ensure that I make every effort to complete every project, while my cautiousness will allow me to be meticulous and minimize errors. 
+        </p>
+        
       </td>
    
   </tr>
