--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ function carousel() {
        
      <tr>
       <td> <h1 style="font-size:25px;color:#BC8F8F"> <i> Project Idea <i> </td>
-       
+       <img src="https://user-images.githubusercontent.com/79895560/112354903-1ebeaf00-8d08-11eb-8f62-a3e83e1690c4.png"style="width:150px;height:150px;">
        <td> 
         <h2 style="font-size:20px;color:#BC8F8F"> <i> Overview </i> </h2>
         <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
