--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ function carousel() {
         <tr>
     <td> 
      <center>
-      <h1 style="font-size:25px;color:#BC8F8F"> <i> Personality Profile <i> </h1>
+      <h1 style="font-size:25px;color:#BC8F8F"> <i> Personality Profile </i> </h1>
      <br>
      <img src="https://user-images.githubusercontent.com/79895560/111969341-17937780-8b35-11eb-80e0-473ca6faa3e4.png"style="width:180px;height:200px;">
      </td>
@@ -273,8 +273,9 @@ function carousel() {
   </tr>
        
      <tr>
-      <td> <h1 style="font-size:25px;color:#BC8F8F"> <i> Project Idea <i> </td>
+      <td> <h1 style="font-size:25px;color:#BC8F8F"> <i> Project Idea </i> 
        <img src="https://user-images.githubusercontent.com/79895560/112354903-1ebeaf00-8d08-11eb-8f62-a3e83e1690c4.png"style="width:150px;height:150px;">
+       </td>
        <td> 
         <h2 style="font-size:20px;color:#BC8F8F"> <i> Overview </i> </h2>
         <p style="text align:center;font-family:garamond;font-size:17px;color:#2F4F4F"> 
