--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   border-left: none;
   border-right: none;
   border-collapse: collapse;
-}
- 
+} 
 th, td {
   padding: 30px;
 }
@@ -24,7 +23,6 @@ th, td {
   border-right: none;
   border-collapse: collapse;
 }
- 
 th, td {
   padding: 30px;
 }
@@ -150,6 +148,21 @@ function carousel() {
 }
  </script>
  </body>
+   
+   <body>
+
+<h2> Favourite Horror Media </h2>
+
+<dl>
+  <dt>NOROI: The Curse </dt>
+  <dd>- black hot drink</dd>
+  <dt>World of Horror</dt>
+  <dd>- white cold drink</dd>
+ <dt>Uzumaki by Junji Ito</dt>
+  <dd>- white cold drink</dd>
+</dl>
+
+</body>
 
     </ul>
   </nav>
