--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@ footer {
   I also really like consuming horror in all its forms - such as manga, movies, books and games. 
     </p>
    <br>
+   
+    <body>
+
+<h2> Favourite Horror Media </h2>
+
+<dl>
+ 
+  <dt> NOROI: The Curse
+ <img src="https://user-images.githubusercontent.com/79895560/112492083-eaa4c600-8dbb-11eb-91ec-27654ae61770.jpeg"style="width:155px;height:155px;border-radius:60%;"> 
+ </dt>
+  <dd>- black hot drink</dd>
+  <dt>World of Horror
+ <img src="https://user-images.githubusercontent.com/79895560/112492434-38213300-8dbc-11eb-8b15-c7b5a2b75a58.jpg"style="width:155px;height:155px;border-radius:60%;"> 
+ </dt>
+  <dd>- white cold drink</dd>
+ <dt>Wytches by Scott Snyder
+  <img src="https://user-images.githubusercontent.com/79895560/112492683-6e5eb280-8dbc-11eb-9ca8-61a4895b6ec1.jpg"style="width:155px;height:155px;border-radius:60%;"> 
+     </dt>
+  <dd>- white cold drink</dd>
+</dl>
+
+</body>
    <body>
     <h2 class="w3-center"><center> FILM </center></h2>
 
@@ -149,20 +171,7 @@ function carousel() {
  </script>
  </body>
    
-   <body>
-
-<h2> Favourite Horror Media </h2>
-
-<dl>
-  <dt>NOROI: The Curse </dt>
-  <dd>- black hot drink</dd>
-  <dt>World of Horror</dt>
-  <dd>- white cold drink</dd>
- <dt>Uzumaki by Junji Ito</dt>
-  <dd>- white cold drink</dd>
-</dl>
-
-</body>
+  
 
     </ul>
   </nav>
