--- a/index.html
+++ b/index.html
@@ -55,6 +55,48 @@ nav {
 nav ul {
   padding: 0;
 }
+ <style>
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+</style>
+ 
 
 article {
   float: left;
@@ -108,8 +150,20 @@ footer {
     </p>
    <br>
    
-    <body>
+<body>
 
+<h2>Opacity with Box</h2>
+<p>Hover over the image to see the effect.</p>
+
+<div class="container">
+  <img src="https://user-images.githubusercontent.com/79895560/112492083-eaa4c600-8dbb-11eb-91ec-27654ae61770.jpeg"style="width:155px;height:155px;border-radius:60%;">
+  <div class="middle">
+    <div class="text">NOROI: The Curse</div>
+  </div>
+</div>
+  
+</body>
+   
 <h2> Favourite Horror Media </h2>
 
 <dl>
