--- a/index.html
+++ b/index.html
@@ -160,15 +160,19 @@ footer {
   <div class="middle">
     <div class="text">NOROI: The Curse</div>
   </div>
+ </div>
  <div class="container">
   <img src="https://user-images.githubusercontent.com/79895560/112495308-bda5e280-8dbe-11eb-8ac7-b276ac6e6848.jpg"style="width:155px;height:155px;border-radius:60%;">
   <div class="middle">
     <div class="text">World of Horror</div>
+  </div>
+ </div>
     <div class="container">
   <img src="https://user-images.githubusercontent.com/79895560/112492683-6e5eb280-8dbc-11eb-9ca8-61a4895b6ec1.jpg"style="width:155px;height:155px;border-radius:60%;">
   <div class="middle">
     <div class="text">Wytches by Scott Snyder</div>
 </div>
+ </div>
   
 </body>
    
