--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 }
 
 .text {
-  background-color: #F0F8FF;
+  background-color: #8FBC8F;
   color: white;
  font-family: Courier;
   font-size: 16px;
@@ -175,28 +175,8 @@ footer {
  </div>
   
 </body>
-   
-<h2> Favourite Horror Media </h2>
-
-<dl>
- 
-  <dt> NOROI: The Curse
- <img src="https://user-images.githubusercontent.com/79895560/112492083-eaa4c600-8dbb-11eb-91ec-27654ae61770.jpeg"style="width:155px;height:155px;border-radius:60%;"> 
- </dt>
-  <dd>- black hot drink</dd>
-  <dt>World of Horror
- <img src="https://user-images.githubusercontent.com/79895560/112492434-38213300-8dbc-11eb-8b15-c7b5a2b75a58.jpg"style="width:155px;height:155px;border-radius:60%;"> 
- </dt>
-  <dd>- white cold drink</dd>
- <dt>Wytches by Scott Snyder
-  <img src="https://user-images.githubusercontent.com/79895560/112492683-6e5eb280-8dbc-11eb-9ca8-61a4895b6ec1.jpg"style="width:155px;height:155px;border-radius:60%;"> 
-     </dt>
-  <dd>- white cold drink</dd>
-</dl>
-
-</body>
    <body>
-    <h2 class="w3-center"><center> FILM </center></h2>
+    <h2 class="w3-center"><center> <i> FILM </i> </center></h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="border-radius:15px;width:100%">
