--- a/index.html
+++ b/index.html
@@ -152,22 +152,27 @@ footer {
    
 <body>
 
-<h2>Opacity with Box</h2>
-<p>Hover over the image to see the effect.</p>
+<h2> Horror Media </h2>
+<p> Hover over to see my favourites! </p>
 
+ 
 <div class="container">
+ <center>
   <img src="https://user-images.githubusercontent.com/79895560/112492083-eaa4c600-8dbb-11eb-91ec-27654ae61770.jpeg"style="width:155px;height:155px;border-radius:60%;">
   <div class="middle">
     <div class="text">NOROI: The Curse</div>
   </div>
  </div>
+  
  <div class="container">
+  <center>
   <img src="https://user-images.githubusercontent.com/79895560/112495308-bda5e280-8dbe-11eb-8ac7-b276ac6e6848.jpg"style="width:155px;height:155px;border-radius:60%;">
   <div class="middle">
     <div class="text">World of Horror</div>
   </div>
  </div>
     <div class="container">
+     <center>
   <img src="https://user-images.githubusercontent.com/79895560/112492683-6e5eb280-8dbc-11eb-9ca8-61a4895b6ec1.jpg"style="width:155px;height:155px;border-radius:60%;">
   <div class="middle">
     <div class="text">Wytches by Scott Snyder</div>
