--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
  
- <style>
+ <style> /* altered the images and background colors from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_opacity to showcase my favourite horror media */
 .container {
   position: relative;
   width: 50%;
