--- a/index.html
+++ b/index.html
@@ -144,15 +144,16 @@ footer {
      <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;">    
       </p>
      </center>
-   <h2> <center> Nana Lee </center> </h2>
-      <p> Hello, I'm Nana! I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
-  I also really like consuming horror in all its forms - such as manga, movies, books and games. 
+   <h2> <center> Hello, I'm Nana! </center> </h2>
+      <p> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
+  My hobbies include baking, journalling, crocheting and analysing horror media.
     </p>
    <br>
    
 <body>
-
-<h2> Horror Media </h2>
+<center>
+<h3> Horror Media </h3>
+ <center>
 <p> Hover over to see my favourites! </p>
 
   <center>
