--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@ footer {
       </p>
      </center>
    <h2> <center> Hello, I'm Nana! </center> </h2>
-      <p> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
-  My hobbies include baking, journalling, crocheting and analysing horror media.
-    </p>
+      <p> <center> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
+  My hobbies include baking, journalling, crocheting and analysing horror media. </center> </p>
    <br>
    
 <body>
