--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@ footer {
      <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;">    
       </p>
      </center>
-   <h2> <center> Hello, I'm Nana! </center> </h2>
-      <p> <center> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
+   <h2 style=font-size:30px;> <center> Hello, I'm Nana! </center> </h2>
+      <p style=font-size:20px;> <center> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
   My hobbies include baking, journalling, crocheting and analysing horror media. </center> </p>
    <br>
    
 <body>
 <center>
-<h3> Horror Media </h3>
+<h3 style=font-size:28px;> Horror Media </h3>
  <center>
 <p> Hover over to see my favourites! </p>
 
@@ -181,7 +181,7 @@ footer {
   
 </body>
    <body>
-    <h2 class="w3-center"><center> <i> FILM </i> </center></h2>
+    <h2 style=font-size:30px;class="w3-center"><center> <i> FILM </i> </center></h2>
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="https://user-images.githubusercontent.com/79895560/112172736-ee0b4680-8c2f-11eb-955c-a969edb9d33e.JPEG" style="border-radius:15px;width:100%">
