--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@ footer {
 <body>
 <center>
 <h3 style=font-size:22px;> Horror Media </h3>
- <center>
-<p style=font-size:15px;> Hover over to see my favourites! </p>
+ <p style=font-size:15px;> Hover over to see my recommendations of existential horror. </p> </center>
 
   <center>
 <div class="container">
