--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@ footer {
      </center>
    <h2 style=font-size:28px;> <center> Hello, I'm Nana! </center> </h2>
       <p style=font-size:20px;> <center> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
-  My hobbies include baking, journalling, crocheting and analysing horror media. </center> </p>
+  My hobbies include baking, journalling, film photography and analysing horror media. </center> </p>
    
 <body>
 <center>
 <h3 style=font-size:22px;> Horror Media </h3>
- <p style=font-size:15px;> Hover over to see my recommendations of existential horror. </p> </center>
+ <p style=font-size:15px;> Hover over to see my recommendations for existential horror. </p> </center>
 
   <center>
 <div class="container">
-  <img src="https://user-images.githubusercontent.com/79895560/112492083-eaa4c600-8dbb-11eb-91ec-27654ae61770.jpeg"style="width:155px;height:155px;border-radius:60%;">
+  <img src="https://user-images.githubusercontent.com/79895560/112492083-eaa4c600-8dbb-11eb-91ec-27654ae61770.jpeg"style="width:145px;height:145px;border-radius:60%;">
   <div class="middle">
     <div class="text">NOROI: The Curse</div>
   </div>
@@ -163,7 +163,7 @@ footer {
    <br>
    <center>
  <div class="container">
-  <img src="https://user-images.githubusercontent.com/79895560/112495308-bda5e280-8dbe-11eb-8ac7-b276ac6e6848.jpg"style="width:155px;height:155px;border-radius:60%;">
+  <img src="https://user-images.githubusercontent.com/79895560/112495308-bda5e280-8dbe-11eb-8ac7-b276ac6e6848.jpg"style="width:145px;height:145px;border-radius:60%;">
   <div class="middle">
     <div class="text">World of Horror</div>
   </div>
@@ -171,7 +171,7 @@ footer {
     <br>
       <center>
     <div class="container">
-  <img src="https://user-images.githubusercontent.com/79895560/112492683-6e5eb280-8dbc-11eb-9ca8-61a4895b6ec1.jpg"style="width:155px;height:155px;border-radius:60%;">
+  <img src="https://user-images.githubusercontent.com/79895560/112492683-6e5eb280-8dbc-11eb-9ca8-61a4895b6ec1.jpg"style="width:145px;height:145px;border-radius:60%;">
   <div class="middle">
     <div class="text">Wytches by Scott Snyder</div>
 </div>
