--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@ footer {
 </body>
 
 <header> 
+ <ul style="list-style-type:none;text-align:right;">
+  <li>s3882267</li>
+  <li><a href="mailto:s3882267@student.rmit.edu.au">Link 1</a></li>
+  <li>+60192589288</li>
+  <li>https://nlee714.github.io/NANA/</li>
+  
 <h1 style=font-family:"Courier-New;"> Nana Lee's ePortfolio </h1>
 </header>
  
