--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@ footer {
 
 <header> 
  <ul style="list-style-type:none;text-align:right;">
-  <li>s3882267</li>
-  <li><a href="mailto:s3882267@student.rmit.edu.au">Link 1</a></li>
-  <li>+60192589288</li>
-  <li>https://nlee714.github.io/NANA/</li>
+  <li style="color:#D2B48C;font-size:10px;">s3882267</li>
+  <li style="color:#D2B48C;font-size:10px;"><a href="mailto:s3882267@student.rmit.edu.au">s3882267@student.rmit.edu.au</a></li>
+  <li style="color:#D2B48C;font-size:10px;">+60192589288</li>
+  <li style="color:#D2B48C;font-size:10px;">https://nlee714.github.io/NANA/</li>
   
+  <center>
 <h1 style=font-family:"Courier-New;"> Nana Lee's ePortfolio </h1>
+  </center>
 </header>
  
  <section>
