--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
  
+ <style>
+  a:link {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+  a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+ </style>
+ 
  <style> /* altered the images and background colors from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_opacity to showcase my favourite horror media */
 .container {
   position: relative;
