--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@ footer {
   <li style="color:#D2B48C;font-size:12px;"><a href="mailto:s3882267@student.rmit.edu.au">s3882267@student.rmit.edu.au</a></li>
   <li style="color:#D2B48C;font-size:12px;">+60192589288</li>
   <li style="color:#D2B48C;font-size:12px;">https://nlee714.github.io/NANA/</li>
-  
+   
   <center>
-<h1 style=font-family:"Courier-New;"> Nana Lee's ePortfolio </h1>
+<h1 style=font-family:"Courier-New;"> <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;float:left;">Nana Lee's ePortfolio </h1>
   </center>
 </header>
  
@@ -161,8 +161,7 @@ footer {
   <nav>
     <ul>
      <p>
-      <center>
-     <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;">    
+      <center>   
       </p>
      </center>
    <h2 style=font-size:28px;> <center> Hello, I'm Nana! </center> </h2>
