--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
  
  <style>
   a:link {
-  color: pink;
+  color: #D2B48C;
   background-color: transparent;
   text-decoration: none;
 }
   a:hover {
-  color: red;
+  color: pink;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -146,6 +146,7 @@ footer {
 </body>
 
 <header> 
+ <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;float:left;">
  <ul style="list-style-type:none;text-align:right;">
   <li style="color:#D2B48C;font-size:12px;">s3882267</li>
   <li style="color:#D2B48C;font-size:12px;"><a href="mailto:s3882267@student.rmit.edu.au">s3882267@student.rmit.edu.au</a></li>
@@ -153,7 +154,7 @@ footer {
   <li style="color:#D2B48C;font-size:12px;">https://nlee714.github.io/NANA/</li>
    
   <center>
-<h1 style=font-family:"Courier-New;"> <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;float:left;">Nana Lee's ePortfolio </h1>
+<h1 style=font-family:"Courier-New;">Nana Lee's ePortfolio </h1>
   </center>
 </header>
  
