--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@ footer {
 <header> 
  <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:175px;height:175px;border-radius:60%;float:left;">
  <ul style="list-style-type:none;text-align:right;">
-  <li style="color:#D2B48C;font-size:12px;">s3882267</li>
-  <li style="color:#D2B48C;font-size:12px;"><a href="mailto:s3882267@student.rmit.edu.au">s3882267@student.rmit.edu.au</a></li>
-  <li style="color:#D2B48C;font-size:12px;">+60192589288</li>
-  <li style="color:#D2B48C;font-size:12px;">https://nlee714.github.io/NANA/</li>
+  <li style="color:#D2B48C;font-size:14px;">w:https://nlee714.github.io/NANA/</li>
+  <li style="color:#D2B48C;font-size:14px;">#:s3882267</li>
+  <li style="color:#D2B48C;font-size:14px;"><a href="mailto:s3882267@student.rmit.edu.au">e:s3882267@student.rmit.edu.au</a></li>
+  <li style="color:#D2B48C;font-size:14px;">m:+60192589288</li>
+  
    
   <center>
 <h1 style=font-family:"Courier-New;">Nana Lee's ePortfolio </h1>
