--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ footer {
 </body>
 
 <header> 
- <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:200px;height:200px;border-radius:60%;float:left;">
+ <img src="https://user-images.githubusercontent.com/79895560/112509884-df599680-8dcb-11eb-8527-a3c57cf0b019.gif" alt="self-portrait" style="width:200px;height:200px;float:left;">
  <ul style="list-style-type:none;text-align:right;">
   <li style="color:#D2B48C;font-size:14px;">w:https://nlee714.github.io/NANA/</li>
   <li style="color:#D2B48C;font-size:14px;">#:s3882267</li>
@@ -166,6 +166,7 @@ footer {
       <center>   
       </p>
      </center>
+    <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:200px;height:200px;border-radius:60%;float:left;">
    <h2 style=font-size:28px;> <center> Hello, I'm Nana! </center> </h2>
       <p style=font-size:20px;> <center> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
   My hobbies include baking, journalling, film photography and analysing horror media. </center> </p>
