--- a/index.html
+++ b/index.html
@@ -147,12 +147,11 @@ footer {
 
 <header> 
  <ul style="list-style-type:none;text-align:right;">
-  <li style="color:#D2B48C;font-size:14px;">w:https://nlee714.github.io/NANA/</li>
-  <li style="color:#D2B48C;font-size:14px;">#:s3882267</li>
-  <li style="color:#D2B48C;font-size:14px;"><a href="mailto:s3882267@student.rmit.edu.au">e:s3882267@student.rmit.edu.au</a></li>
-  <li style="color:#D2B48C;font-size:14px;">m:+60192589288</li>
-  
-   
+ 
+  <li style="color:#D2B48C;font-size:14px;">m:+60 192589288</li>
+    <li style="color:#D2B48C;font-size:14px;">#:s3882267</li>
+   <li style="color:#D2B48C;font-size:14px;"><a href="mailto:s3882267@student.rmit.edu.au">e:s3882267@student.rmit.edu.au</a></li>
+  <li style="color:#D2B48C;font-size:14px;">w:https://nlee714.github.io/NANA/</li> 
   <center>
 <h1 style=font-family:"Courier-New;">Nana Lee's ePortfolio </h1>
   </center>
@@ -161,7 +160,9 @@ footer {
  <section>
   <nav>
     <ul>
+     <center>
     <img src="https://user-images.githubusercontent.com/79895560/112177525-f9607100-8c33-11eb-83a9-904dc525b54c.jpeg" alt="self-portrait" style="width:200px;height:200px;border-radius:60%;">
+     </center>
    <h2 style=font-size:28px;> <center> Hello, I'm Nana! </center> </h2>
       <p style=font-size:20px;> <center> I'm currently based in Malaysia, and have been living here for the past 10 years. I grew up in Turkmenistan, and my cultural background consists of Malay and Chinese heritage.
   My hobbies include baking, journalling, film photography and analysing horror media. </center> </p>
