--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
- /* image references for horror panel:
- 
- Shiraishi K, 2005, Noroi:The Curse, Xanadeux Company, viewed 24 March 2021 <https://www.gq.com/story/noroi-the-curse-cult-horror-film>
- 
- Kozminski P, 2019, World of Horror, Ysbryd Games, viewed 24 March 2021 <https://www.wohgame.com/>
- 
- Snyder S, Jock, 2014, Wytches, Image Comics, viewed 24 March 2021 <https://imagecomics.com/comics/series/wytches>
- 
-*/
- 
- /* image references for icons in table:
- 
- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-  
- */
-
-
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
  
  <style>
+  /* image references for horror panel: Shiraishi K, 2005, Noroi:The Curse, Xanadeux Company, viewed 24 March 2021 <https://www.gq.com/story/noroi-the-curse-cult-horror-film> Kozminski P, 2019, World of Horror, Ysbryd Games, viewed 24 March 2021 <https://www.wohgame.com/> Snyder S, Jock, 2014, Wytches, Image Comics, viewed 24 March 2021 <https://imagecomics.com/comics/series/wytches> */
+  /* image references for icons in table: <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> */
+  
   a:link {
   color: #D2B48C;
   background-color: transparent;
